fixed alignment issue

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,7 +1,7 @@
 #nav_links {
     text-align: center;
     position: absolute;
-    top: 100px;
+    top: 104px;
     right: 8.5%;
     z-index: 1000;
     padding-block: 1rem;
